html/controls/twitter.css
/**
 * Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
 *
 * This file is part of the Carolina Rollergirls (CRG) ScoreBoard.
 * The CRG ScoreBoard is licensed under either the GNU General Public
 * License version 3 (or later), or the Apache License 2.0, at your option.
 * See the file COPYING for details.
 */

/* Main controls */
  #Layout { border: 1px solid black; width: 100%; }
  #Layout>tbody>tr>td { width: 50%; text-align: center; }

  p.Error:not(.Show) { display: none; }

  p.LogInStatus:not(.LoggedIn) a.LoggedIn { display: none; }
  p.LogInStatus.LoggedIn a.NotLoggedIn { display: none; }
/* End Main controls */

/* ConditionalTweets table */
  #ConditionalTweets { width: 100%; }
  #ConditionalTweets>tbody>tr.Template { display: none; }
  #ConditionalTweets th.Remove { width: 20%; }
  #ConditionalTweets th.Condition { width: 40%; }
  #ConditionalTweets th.Tweet { width: 40%; }
  #ConditionalTweets>tbody>tr:nth-child(odd)>td { background: #eee; }
  #ConditionalTweets>tbody>tr:nth-child(even)>td { background: #ccc; }
/* End ConditionalTweets table */

/* ShowFormatSpecifiersDialog */
  div.ShowFormatSpecifiersDialog { font-size: 75%; }
  div.ShowFormatSpecifiersDialog table { width: 100%; }
  div.ShowFormatSpecifiersDialog table td { width: 50%; }
/* End ShowFormatSpecifiersDialog */

